--- a/src/features/layout/layout.css
+++ b/src/features/layout/layout.css
@@ -9,7 +9,7 @@
   background-color: orange;
   color: beige;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   margin-bottom: 20px;
 }
@@ -18,4 +18,15 @@
   display: inline;
   margin-right: 25px;
   padding: 7px;
+}
+.search-block input,
+.search-block button {
+  padding: 7px;
+  margin-left: 2px;
+  border-radius: 15px;
+}
+
+.search-block button {
+  background-color: rgb(246, 195, 100);
+  color: beige;
 }
